templates/cilium-network-policies/argocd-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-argcd-egress"
spec:
  endpointSelector:
    matchLabels:
      'k8s:io.kubernetes.pod.namespace': 'argocd'
      app.kubernetes.io/component: repo-server
  egress:
  - toEntities:
    - "all"
