templates/cilium-network-policies/cluster-internal-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-egress-to-cluster"
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - "cluster"
