templates/cilium-network-policies/ingress-controller-backends.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-ingress-controllers-to-backends"
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
      - matchLabels:
          'k8s:io.kubernetes.pod.namespace': 'ingress'
