templates/cilium-network-policies/ingress-controllers.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-ingress-controllers"
spec:
  endpointSelector:
    matchLabels:
      'k8s:io.kubernetes.pod.namespace': 'ingress'
  ingress:
  - fromEntities:
    - "all"
