templates/cilium-network-policies/remote-node.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-remote-node"
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
      - remote-node
  egress:
    - toEntities:
      - remote-node
